--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "license": "ISC",
   "devDependencies": {
     "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "*",
     "concurrently": "^6.2.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^5.2.6",
+    "dat-gui": "^0.5.0",
+    "dat.gui": "^0.7.7",
     "eslint": "^7.30.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-loader": "^4.0.2",
@@ -42,6 +43,7 @@
   "dependencies": {
     "auto-bind": "^4.0.0",
     "babylonjs": "^4.2.0",
+    "babylonjs-loaders": "^4.2.0",
     "cannon": "^0.6.2",
     "express": "^4.17.1",
     "nodemon": "^2.0.9",
